Refactor Contact Section Layout and Styles
- Changed the layout of the TwoColumnContact component from flexbox to grid for better responsiveness.
- Updated CSS styles to accommodate the new grid layout and ensure proper sizing of elements.
- Introduced a new ThreeImageCta component to enhance call-to-action sections with three images.
- Added corresponding styles for the ThreeImageCta component to ensure proper layout and responsiveness.
- Modified VerticalImageCta styles to adjust padding for better spacing.
- Enhanced Section component to conditionally render images and cards based on data availability.
- Updated styles for the Section component to improve layout and visual hierarchy.
- Integrated new ThreeImageCta component into the Sections component for better modularity.
- Adjusted TwoColumnStats component to inherit styles from the content_section__header class for consistency.
- Removed unused store.ts file to clean up the codebase.
- Improved SEO tests to validate meta tags, headings, and image attributes for better accessibility and performance.
- Updated pocketbase utility to include hero cover in data fetching.
- Introduced new props type definitions for better type safety in HeroProps.
- Made core_values optional in PageType to accommodate varying data structures.

--- a/src/components/Cards/Basic/basic.css
+++ b/src/components/Cards/Basic/basic.css
@@ -1,7 +1,7 @@
 .basic_card {
     display: grid;
     gap: var(--size-3);
-    padding-block: 0 var(--size-3);
+    padding: var(--size-8) 0;
     width: 100%;
     max-width: 100%;
 }
@@ -10,7 +10,6 @@
 @media (min-width: 640px) {
     .basic_card {
         gap: var(--size-6);
-        padding: 0;
         grid-template-columns: repeat(2, 1fr);
     }
 }
