--- a/src/components/CustomImage.astro
+++ b/src/components/CustomImage.astro
@@ -1,12 +1,12 @@
 ---
-interface Props {
-    image: {
-        [key: string]: string;
-    };
-    classlist: string;
-    size: 'small' | 'medium' | 'large';
-    eager: boolean;
-}
+// interface Props {
+//     image: {
+//         [key: string]: string;
+//     };
+//     classlist: string;
+//     size: 'small' | 'medium' | 'large';
+//     eager: boolean;
+// }
 
 import { getImageUrl } from "@utils/pocketbase";
 import { Image, inferRemoteSize } from "astro:assets";
@@ -37,5 +37,8 @@ const sizes = size === 'small' ? `(max-width: 1366px) 350px, 500px` : size === '
     class={classlist}
     loading={eager ? "eager" : "lazy"}
     decoding={eager ? "sync" : "async"}
+    data-eager={eager ? "true" : "false"}
     style={`object-position: ${image.position ? image.position : "center"}; object-fit: ${image.fit ? image.fit : "cover"}`}
+    data-src={src}
+    data-alt={image.title}
 />
