--- a/src/components/Hero/HorizontalWithImage/HorizontalWithImage.astro
+++ b/src/components/Hero/HorizontalWithImage/HorizontalWithImage.astro
@@ -3,14 +3,8 @@ import Container from "@components/Container.astro";
 import "./hero.css";
 import { inferRemoteSize, Picture } from "astro:assets";
 import { getImageUrl } from "@utils/pocketbase";
-
-interface Props {
-    title: string;
-    excerpt: string;
-    image: {
-        [key: string]: string;
-    };
-}
+import type { HeroProps } from "@utils/types";
+interface Props extends HeroProps {}
 const { title, excerpt, image } = Astro.props;
 
 const url = getImageUrl({
