--- a/src/components/Sections/VerticalImages/VerticalImages.astro
+++ b/src/components/Sections/VerticalImages/VerticalImages.astro
@@ -13,6 +13,7 @@ import "./section.css";
 import { Icon } from "astro-icon/components";
 import CustomImage from "@components/CustomImage.astro";
 const { data, core_values } = Astro.props;
+console.log("card images",data.expand.image)
 ---
 
 <div class="col-grid-12">
