--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,25 +1,64 @@
+@media (min-width: 768px) {
+    :root {
+        --heading-4xl: 96px;
+        --heading-4xl-weight: 700;
+
+        --heading-3xl: 72px;
+        --heading-3xl-weight: 700;
+
+        --heading-2xl: 56px;
+        --heading-2xl-weight: 700;
+
+        --heading-xl: 40px;
+        --heading-xl-weight: 700;
+        --heading-large: 32px;
+        --heading-large-weight: 700;
+
+        --heading-medium: 24px;
+        --heading-medium-weight: 700;
+
+        --heading-small: 20px;
+        --heading-small-weight: 700;
+
+        --heading-xsmall: 18px;
+        --heading-xsmall-weight: 700;
+
+        --body-large: 16px;
+        --body-large-weight: 400;
+
+        --body-medium: 12px;
+        --body-medium-weight: 400;
+
+        --body-small: 10px;
+        --body-small-weight: 400;
+    }
+}
+
 :root {
-    --heading-4xl: 96px;
+    /* Mobile-Optimized Font Sizes */
+
+    --heading-4xl: 48px;
     --heading-4xl-weight: 700;
-    
-    --heading-3xl: 72px;
+
+    --heading-3xl: 40px;
     --heading-3xl-weight: 700;
-    
-    --heading-2xl: 56px;
+
+    --heading-2xl: 32px;
     --heading-2xl-weight: 700;
-    
-    --heading-xl: 40px;
+
+    --heading-xl: 28px;
     --heading-xl-weight: 700;
-    --heading-large: 32px;
+
+    --heading-large: 24px;
     --heading-large-weight: 700;
 
-    --heading-medium: 24px;
+    --heading-medium: 20px;
     --heading-medium-weight: 700;
 
-    --heading-small: 20px;
+    --heading-small: 18px;
     --heading-small-weight: 700;
 
-    --heading-xsmall: 18px;
+    --heading-xsmall: 16px;
     --heading-xsmall-weight: 700;
 
     --body-large: 16px;
@@ -175,7 +214,7 @@ h5 {
 }
 
 h1 {
-    font-size: var(--heading-large);
+    font-size: var(--heading-xl);
 }
 
 .content-grid {
@@ -307,6 +346,7 @@ a:not([class]) {
     height: fit-content;
 
     text-decoration: none;
+    font-weight: var(--heading-medium-weight);
 }
 
 .btn-md {
@@ -358,7 +398,7 @@ a:not([class]) {
 /* Outline Button */
 .btn-outline {
     background-color: transparent;
-    color: var(--clr-primary);
+    color: var(--clr-primary-darker);
     border: 2px solid currentColor;
 }
 
@@ -445,9 +485,9 @@ button:disabled,
         width: var(--content-max-width);
         /* height: calc(var(--content-max-width) / 2.5);
          */
-         height: 100%;
+        height: 100%;
         padding: 0;
-        margin: var(--container-padding-block) auto;
+        /* margin: var(--container-padding-block) auto; */
     }
 }
 
@@ -464,9 +504,10 @@ button:disabled,
         width: var(--content-max-width);
         height: calc(var(--content-max-width) / 2.5);
         padding: 0;
-        margin: var(--container-padding-block) auto;
+        /* margin: var(--container-padding-block) auto; */
     }
 }
+
 @media (min-width: 768px) {
     .col-grid-12 {
         --content-max-width: var(--content-max-width);
@@ -573,6 +614,7 @@ button:disabled,
     height: 100%;
 
 }
+
 .alternating-card__image-wrapper[data-has-background] {
     background-color: hsl(var(--clr-secondary-hsl) / 0.15);
 }
