--- a/src/components/Footer/FloatingFooter/FloatingFooter.astro
+++ b/src/components/Footer/FloatingFooter/FloatingFooter.astro
@@ -1,21 +1,27 @@
 ---
+import { translateFooterItem } from '@utils/translations';
+
 interface Props {
     title: string;
-    designedBy: string;
+    company_name: string;
     parent_site_url: string;
-    rightsReserved: string;
+    country: string;
 }
+
 import Container from "@components/Container.astro";
 import "./footer.css";
 import { Image } from "astro:assets";
-const { title, designedBy, parent_site_url, rightsReserved } = Astro.props;
+const { title, company_name, parent_site_url, country } = Astro.props;
+
+const copyright = translateFooterItem('copyright', country);
+const designedByText = translateFooterItem('designed_by', country);
 ---
 
 <footer class="floating_footer">
     <Container>
         <div class="breakout floating_footer__content">
             <p>
-                &copy; {new Date().getFullYear()} {title.split("|")[0].trim()}. {rightsReserved}
+                &copy; {new Date().getFullYear()} {title.split("|")[0].trim()}. {copyright}
             </p>
             <a
                 href={parent_site_url}
@@ -31,7 +37,7 @@ const { title, designedBy, parent_site_url, rightsReserved } = Astro.props;
                     class="floating_footer__logo-image"
                 />
                 <span class="floating_footer__logo-text"
-                    >{designedBy}</span
+                    >{designedByText} {company_name}</span
                 >
             </a>
         </div>
