--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -3,6 +3,13 @@ import FloatingFooter from "./FloatingFooter/FloatingFooter.astro";
 import TinyFooter from "./TinyFooter/TinyFooter.astro";
 
 const {company, title, style, country} = Astro.props
+
+const footerProps = {
+    title,
+    company_name: company.companyName,
+    parent_site_url: company.url,
+    country
+}
 ---
-{style === 'floating' && <FloatingFooter rightsReserved={company.rightsReserved} title={title} designedBy={company.name} parent_site_url={company.url} />}
-{style === 'default' && <TinyFooter title={title} rightsReserved={company.rightsReserved} designedBy={company.designedBy} parent_site_url={company.url} country={country}/>}
+{style === 'floating' && <FloatingFooter {...footerProps} />}
+{style === 'default' && <TinyFooter {...footerProps} />}
