--- a/src/components/Hero/TwoSquares/TwoSquares.astro
+++ b/src/components/Hero/TwoSquares/TwoSquares.astro
@@ -2,14 +2,9 @@
 import Container from "@components/Container.astro";
 import "./hero.css";
 import CustomImage from "@components/CustomImage.astro";
+import type { HeroProps } from "@utils/types";
+interface Props extends HeroProps {}
 
-interface Props {
-    title: string;
-    excerpt: string;
-    image: {
-        [key: string]: string;
-    };
-}
 const { title, excerpt, image } = Astro.props;
 ---
 
