--- a/src/components/Hero/TwoSquares/hero.css
+++ b/src/components/Hero/TwoSquares/hero.css
@@ -10,7 +10,7 @@
 
 .two-square__content {
     grid-row: 1 /2;
-    padding: var(--size-8);
+    padding: var(--size-4) var(--size-2);
     color: var(--clr-primary-dark-text);
     background-color: var(--clr-primary-dark);
 }
@@ -19,24 +19,20 @@
     grid-row: 2 / -1;
 }
 .two-square__image {
-    width: 95%;
-    margin: 0 auto;
+    width: 100%;
     height: 100%;
-    border: 5px solid currentColor;
-
-    border-top: none;
-    border-left-color:var(--clr-primary-dark);
-    border-bottom-color:var(--clr-primary-dark);
-    border-right-color:var(--clr-primary-dark);
+    margin: 0 auto;
+    padding: var(--size-1);
+    background-color: var(--clr-primary-dark);
 }
 @media (min-width: 768px) {
     .two-square {
         --row-height: 400px;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: var(--row-height);
+        grid-template-rows: auto;
         align-items: center;
-        padding: calc(var(--container-padding-block) / 1.618) 0;
+        padding: calc(var(--container-padding-block) / 2.618) 0;
         /* border-top: 1px solid var(--clr-neutral-400); */
         /* border-bottom: 1px solid var(--clr-neutral-400); */
     }
@@ -51,18 +47,16 @@
     }
     .two-square__image {
         width: 100%;
-        height: 100%;
-        border-top:5px solid var(--clr-primary-dark);
-        border-bottom-color:var(--clr-primary-dark);
-        border-right-color:var(--clr-primary-dark);
-        border-left: none;
+        height: 400px;
     }
 
     .two-square__image-wrapper {
+        grid-column: 2 / -2;
         /* overflow: hidden; */
         width: 100%;
         height: 100%;
-        padding: var(--size-8) 0;
+        background-color: var(--clr-primary-dark);
+        padding: var(--size-1);
     }
 
     .two-square__content {
