--- a/src/components/Sections/Section/section.css
+++ b/src/components/Sections/Section/section.css
@@ -1,66 +1,52 @@
 .content_section {
     padding-block: var(--container-padding-block);
 }
-
-.content_section__header {
-    margin-bottom: var(--size-8);
-    text-align: left;
-}
-
-.content_section__header h2 {
-    font-size: var(--heading-medium);
-}
-.content_section__wrapper {
-    display: grid;
-    gap: var(--size-8);
-    margin-bottom: var(--size-8);
-}
-
-.content_section__content {
+.content_section__content_wrapper {
     display: flex;
     flex-direction: column;
     gap: var(--size-4);
 }
+.content_section__header h2 {
+    font-size: var(--heading-large);
+    color: var(--clr-primary-dark);
+}
 
-.content_section__image {
-    display: block;
-    width: 100%;
-    max-width: 600px;
-    height: 100%;
-    margin-inline: auto;
-    object-fit: contain;
-    object-position: center;
-
-    overflow: hidden;
+[data-highlight="true"] .content_section__header h2 {
+    color: var(--clr-neutral-50);
 }
 
 .content_section__content ul {
     margin-left: var(--size-4);
 }
 
+.content_section__article {
+    display: flex;
+    flex-direction: column;
+    gap: var(--size-3);
+}
+.content_section__content {
+    display: flex;
+    flex-direction: column;
+    gap: var(--size-2);
+}
+
+.content_section__content > * {
+    line-height: 1.5;
+}
+
+.content_section__image_wrapper,
+.content_section__image {
+    width: 100%;
+    height: 100%;
+}
+
 /* Tablet and up */
 @media (min-width: 800px) {
-    .content_section__wrapper,
-    .content_section__header {
+    .content_section__content_wrapper {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(2, 50%);
+        grid-template-rows: auto;
         align-items: center;
         gap: var(--size-8);
-    }
-    
-    .content_section__content ul {
-        margin-left: var(--size-4);
-    }
-    /* .content_section__image-wrapper[data-fancy-wrapper="true"] {
-        --size: 200px;
-
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(var(--size), 1fr));
-        grid-auto-rows: var(--size);
-        gap: var(--size-1);
-    } */
-
-    .content_section__image-wrapper > :last-child {
-        grid-column: 1 / -1;
     }
 }
