--- a/src/components/Hero/WavyHero/WavyHero.astro
+++ b/src/components/Hero/WavyHero/WavyHero.astro
@@ -11,20 +11,30 @@ const { title, image, cover, excerpt } = Astro.props;
     <header class="wavy_hero">
         <div class="wavy_hero__cover_wrapper">
             <h1 class="wavy_hero__content_title">{title}</h1>
-            <CustomImage
-                image={cover}
-                classlist="wavy_hero__cover_image"
-                size="large"
-                eager={true}
-            />
+            {
+                cover && (
+                    <CustomImage
+                        image={cover}
+                        classlist="wavy_hero__cover_image"
+                        size="large"
+                        eager={true}
+                    />
+                )
+            }
         </div>
         <div class="wavy_hero__content_wrapper">
             <p class="wavy_hero__content_excerpt">{excerpt}</p>
             <div class="wavy_hero__btn_wrapper">
-                <a href="#contact" class="btn btn-primary btn-md wavy_hero__cta">
+                <a
+                    href="#contact"
+                    class="btn btn-primary btn-md wavy_hero__cta"
+                >
                     Let's Work Together
                 </a>
-                <a href="#product" class="btn btn-outline btn-md wavy_hero__cta">
+                <a
+                    href="#product"
+                    class="btn btn-outline btn-md wavy_hero__cta"
+                >
                     Explore what we offer
                 </a>
             </div>
